Add password and SDID login flows
